# mdb-macrostrategy

./: .gitignore  README.md  TLDR.md  app.py  blog.md  compare.py  demo-mdb.py  demo-psql.py  docker-compose.yml  mongodb-story.md  pyproject.toml
.github/workflows/: ci.yml
basic/: README.md  __init__.py  app.py  compare.py  demo_mdb.py  demo_psql.py  docker-compose.yml
basic/bench/: __init__.py  common.py  mongo.py  pg.py
basic/tests/: test_common.py  test_compare.py  test_integration.py
bench/: __init__.py  common.py  mongo.py  pg.py
search/: README.md  __init__.py  app.py  compare_search.py  demo_mdb_search.py  demo_psql_search.py  docker-compose.yml
search/bench/: __init__.py  common.py  corpus.py  mongo_search.py  pg_search.py
search/static/: app.js  index.html
search/tests/: test_corpus.py  test_search_integration.py
shared/: __init__.py  common.py
shared/tests/: test_stats.py
static/: app.js  index.html  styles.css
tests/: test_common.py  test_compare.py  test_integration.py
